@@ -1,3 +1,9 @@
+2011-10-09  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/edge/expose.jl
+	* lisp/sawfish/wm/ext/expose.jl: moved file
+
+	* lisp/sawfish/wm/edge/misc.jl: define expose-action here
+
 2011-10-04  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/edge/conf.jl
 	* lisp/sawfish/wm/edge/actions.jl
